--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <div class="container">
             <div class="row">
                 <h1>Where in the world?</h1>
+                <div class="dark__mode">
+                    <i class="fa-regular fa-moon"></i>
+                    <span>dark mode</span>
+                </div>
             </div>
         </div>
     </header>
