--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                             <i class="fa-solid fa-chevron-down"></i>
                         </div>
                         <ul id="menuBox">
-                            <li data-value="Africa">Africa</li>
-                            <li data-value="America">America</li>
-                            <li data-value="Asia">Asia</li>
-                            <li data-value="Europe">Europe</li>
-                            <li data-value="Oceania">Oceania</li>
+                            <li data-continent="Africa">Africa</li>
+                            <li data-continent="America">America</li>
+                            <li data-continent="Asia">Asia</li>
+                            <li data-continent="Europe">Europe</li>
+                            <li data-continent="Oceania">Oceania</li>
                         </ul>
                     </div>
                 </form>
@@ -48,85 +48,8 @@
         </section>
         <section class="country__list">
             <div class="container">
-                <div class="row">
-                    <div class="country__box">
-                        <div class="country__img">
-                            <img src="ax.png" alt="">
-                        </div>
-                        <div class="country__details">
-                            <h4>Åland Islands</h4>
-                            <ul>
-                                <li><strong>Population:</strong> <span>28875</span></li>
-                                <li><strong>Region:</strong> <span>Europe</span></li>
-                                <li><strong>Capital:</strong> <span>Mariehamn</span></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="country__box">
-                        <div class="country__img">
-                            <img src="ax.png" alt="">
-                        </div>
-                        <div class="country__details">
-                            <h4>Åland Islands</h4>
-                            <ul>
-                                <li><strong>Population:</strong> <span>28875</span></li>
-                                <li><strong>Region:</strong> <span>Europe</span></li>
-                                <li><strong>Capital:</strong> <span>Mariehamn</span></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="country__box">
-                        <div class="country__img">
-                            <img src="ax.png" alt="">
-                        </div>
-                        <div class="country__details">
-                            <h4>Åland Islands</h4>
-                            <ul>
-                                <li><strong>Population:</strong> <span>28875</span></li>
-                                <li><strong>Region:</strong> <span>Europe</span></li>
-                                <li><strong>Capital:</strong> <span>Mariehamn</span></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="country__box">
-                        <div class="country__img">
-                            <img src="ax.png" alt="">
-                        </div>
-                        <div class="country__details">
-                            <h4>Åland Islands</h4>
-                            <ul>
-                                <li><strong>Population:</strong> <span>28875</span></li>
-                                <li><strong>Region:</strong> <span>Europe</span></li>
-                                <li><strong>Capital:</strong> <span>Mariehamn</span></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="country__box">
-                        <div class="country__img">
-                            <img src="ax.png" alt="">
-                        </div>
-                        <div class="country__details">
-                            <h4>Åland Islands</h4>
-                            <ul>
-                                <li><strong>Population:</strong> <span>28875</span></li>
-                                <li><strong>Region:</strong> <span>Europe</span></li>
-                                <li><strong>Capital:</strong> <span>Mariehamn</span></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="country__box">
-                        <div class="country__img">
-                            <img src="ax.png" alt="">
-                        </div>
-                        <div class="country__details">
-                            <h4>Åland Islands</h4>
-                            <ul>
-                                <li><strong>Population:</strong> <span>28875</span></li>
-                                <li><strong>Region:</strong> <span>Europe</span></li>
-                                <li><strong>Capital:</strong> <span>Mariehamn</span></li>
-                            </ul>
-                        </div>
-                    </div>
+                <div class="row search__result">
+
                 </div>
             </div>
         </section>
