--- a/country-details.html
+++ b/country-details.html
@@ -29,37 +29,8 @@
                     <i class="fa-solid fa-arrow-left-long"></i>
                     <button>Back</button>
                 </div>
-                <div class="row">
-                    <div class="image__container">
-                        <img src="ax.png" alt="">
-                    </div>
-                    <div class="country-details">
-                        <h4>belgium</h4>
-                        <div class="details">
-                            <div class="list__content">
-                                <ul>
-                                    <li><strong>native name: </strong><span>لبنان</span></li>
-                                    <li><strong>population: </strong><span>6825442</span></li>
-                                    <li><strong>region: </strong><span>Asia</span></li>
-                                    <li><strong>sub region: </strong><span>Western Asia</span></li>
-                                    <li><strong>capital: </strong><span>Beirut</span></li>
-                                </ul>
-                                <ul>
-                                    <li><strong>top level domain: </strong><span>lb</span></li>
-                                    <li><strong>currencies: </strong>euro<span></span></li>
-                                    <li><strong>languages: </strong><span>Arabic, French</span></li>
-                                </ul>
-                            </div>
-                            <div class="border__countries">
-                                <h5>border countries:</h5>
-                                <div class="border__content">
-                                    <span>spain</span>
-                                    <span>france</span>
-                                    <span>italy</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                <div class="row" id="row">
+
                 </div>
             </div>
         </section>
