--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         </div>
                         <ul id="menuBox">
                             <li data-continent="Africa">Africa</li>
-                            <li data-continent="America">America</li>
+                            <li data-continent="Americas">America</li>
                             <li data-continent="Asia">Asia</li>
                             <li data-continent="Europe">Europe</li>
                             <li data-continent="Oceania">Oceania</li>
